2010-07-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* release 3.4

2010-07-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-setup-vprop, vc-clearcase-root): try
	to determine the view root even in dynamic views.

2010-06-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-annotate-date-format)
	(clearcase-annotate-user-width)
	(clearcase-annotate-version-width): new variables.
	(vc-clearcase-annotate-command): use
	`clearcase-annotate-user-width' in the format string sent to
	cleartool
	(clearcase-annotate-post-process): re-written to do a single pass
	over the annotate buffer also uses user defined date format and
	width fields for the version and user.
	(clearcase-annotate-search-for-property): new function.
	(vc-clearcase-annotate-time)
	(vc-clearcase-annotate-extract-revision-at-line): use it
	(vc-clearcase-annotate-difference): removed as it is not used in
	Emacs23.

2010-06-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-annotate-post-process): use the
	DD/MM/YY date format (same length for all dates)

2010-06-14  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-projects-vob): new variable, replaces all implicit
	uses of "/projects" in the code.

2010-06-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-annotate-post-process): fixup number
	of whitespaces in padding string.

2010-05-21  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Ola Nilsson <ola.nilsson@gmail.com> for Bug #6

	* vc-clearcase.el (vc-clearcase-annotate-command): use the %SNd
	"short numerical date" for the dates in the annotate lines.
	(clearcase-annotate-months): removed.
	(clearcase-annotate-date-rx, clearcase-annotate-mktime): updated
	for the new date format.
	(clearcase-annotate-post-process): reformat the timestamps in the
	buffer to to DD/MM/YYYY format.

2010-04-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-hijack-file-handler): make the