@@ -1,3 +1,8 @@
+2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* vc-clearcase.el (vc-clearcase-root): return nil (instead of
+	signalling an error) if FILE is not inside ClearCase.
+
 2010-07-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* release 3.4
